--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>IT Next Level - Jobs</title>
+    <title>Jobs Page-Izah</title>
     <!-- Imports do Header -->
 
     <!-- Font-Awesome -->
